--- a/index.html
+++ b/index.html
@@ -46,9 +46,38 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <!-- features will enjoy -->
-         <section>
+        <!-- features section start -->
+         <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
+                <!-- feature card container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experienced-badge" class="btn-primary">
+                    <span id="experienced-year">10+Year</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
          </section>
          <!-- some facts -->
           <section class="some-facts">
