--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                  </div>
             </div>
-            <div>
+            <div class="feature-arch">
                 <img src="images/architect.png" alt="">
                 <button id="experienced-badge" class="btn-primary">
                     <span id="experienced-year">10+Year</span>
